2006-01-08  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix weird whitespace.

2006-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Cache the metadata.  This doesn't persist user changes or verify
	for updates, but it's a start.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/gconf-bridge.[ch]:
	Add GConf bridge, copied from the libgconf-bridge module.

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sound-juicer.h:
	Use gconf-bridge to sync some properties, and the window size.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Protect against NULL profiles.

2006-01-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-metadata-musicbrainz.c:
	Configure the MusicBrainz proxy based on the gnome-vfs keys
	(#321008).

2006-01-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-metadata.c:
	* src/sj-metadata.h:
	* src/sj-metadata-musicbrainz.c:
	Add a Submit button to open the relevant MusicBrainz page (James
	Hensbridge, #112889).

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-06  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "vi" to ALL_LINGUAS.

2006-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Remove leading periods when generating filenames (closes #144280).

2005-12-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix warnings with libglade in newer versions of glib
	(missing exports) (Closes: #324385)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Almost-match Totem's Next/Previous keybindings, to stop stealing
	C-v from paste (#321328).

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the Prefs dialog non-resizable, and name the labels.

	* src/sj-prefs.c:
	Add the labels to a size group (#316965)
