@@ -1,5 +1,10 @@
 2006-01-08  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-metadata-cdtext.c:
+	Calculate the track durations.
+
+2006-01-08  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Fix weird whitespace.
 
